--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,12 +1,12 @@
 modLoader="javafml" #mandatory
 loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-issueTrackerURL="" #optional
+issueTrackerURL="http://minecraft.net" #optional
 [[mods]] #mandatory
 modId="enchanting_plus" #mandatory
 version="1.15.2-0.1.0" #mandatory
 displayName="Enchanting+" #mandatory
-updateJSONURL="" #optional
-displayURL="" #optional
+updateJSONURL="http://minecraft.net" #optional
+displayURL="http://minecraft.net" #optional
 logoFile="examplemod.png" #optional
 credits="Thanks for this example mod goes to Java" #optional
 authors="Kkwolek98 @ Github" #optional
